# ASI_projekt

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml
docs/: architecture.md  technology-decisions.md
frontend/: app.js  index.html  style.css
src/app/: __init__.py  main.py
src/app/api/: router.py  schemas.py
src/app/api/routes/: space.py
src/app/core/: config.py  exceptions.py  handlers.py
src/app/db/: models.py  session.py
src/app/ingestion/: __init__.py  nasa_client.py  normalizers.py  open_notify_client.py
src/app/repositories/: space_observations.py
tests/: test_external_api_errors.py  test_health.py  test_normalizers.py
tests/performance/: locustfile.py
